--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -1,11 +1,79 @@
 <!DOCTYPE html>
+<!--  Javascript30  - Wes Bos challenge   -->
+<!--  Day 1 :: Javascript Drum Kit        -->
+<!--  Novitz Jean-Philippe (jphnovitz.be) -->
+<!--  hello@jiphi.be                      -->
+<!--  september 2017                      -->
+
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Novitz Jean-Philippe JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
+  <div class="keys">
+    <div data-key="81" class="key">
+      <span class="letter">Q</span>
+      <span class="sound">clap</span>
+    </div>
+    <div data-key="83" class="key">
+      <span class="letter">S</span>
+      <span class="sound">hihat</span>
+    </div>
+    <div data-key="68" class="key">
+      <span class="letter">D</span>
+      <span class="sound">hit</span>
+    </div>
+    <div data-key="70" class="key">
+      <span class="letter">F</span>
+      <span class="sound">openhat</span>
+    </div>
+    <div data-key="71" class="key">
+      <span class="letter">G</span>
+      <span class="sound">boom</span>
+    </div>
+    <div data-key="72" class="key">
+      <span class="letter">H</span>
+      <span class="sound">ride</span>
+    </div>
+    <div data-key="74" class="key">
+      <span class="letter">J</span>
+      <span class="sound">snare</span>
+    </div>
+    <div data-key="75" class="key">
+      <span class="letter">K</span>
+      <span class="sound">tom</span>
+    </div>
+    <div data-key="76" class="key">
+      <span class="letter">L</span>
+      <span class="sound">tink</span>
+    </div>
+
+  </div>
+
+  <audio data-key="81" src="sounds/clap.wav"></audio>
+  <audio data-key="83" src="sounds/hihat.wav"></audio>
+  <audio data-key="68" src="sounds/kick.wav"></audio>
+  <audio data-key="70" src="sounds/openhat.wav"></audio>
+  <audio data-key="71" src="sounds/boom.wav"></audio>
+  <audio data-key="72" src="sounds/ride.wav"></audio>
+  <audio data-key="74" src="sounds/snare.wav"></audio>
+  <audio data-key="75" src="sounds/tom.wav"></audio>
+  <audio data-key="76" src="sounds/tink.wav"></audio>
+  <script>
+    window.addEventListener('keydown', function(e) {
+      console.log(e.keyCode);
+      var audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+      if (!audio) return; // stops if audio is not valid / is null
+      audio.play(audio);
+      var keydiv = document.querySelector(`div[data-key="${e.keyCode}"]`);
+      keydiv.classList.add('playing');
+    })
+  </script>
 </body>
+
 </html>
