css and js clock

--- a/02-clock/index.html
+++ b/02-clock/index.html
@@ -3,27 +3,45 @@
 <!--  Day 2 :: Javascript Clock        -->
 <!--  Novitz Jean-Philippe (jphnovitz.be) -->
 <!--  hello@jiphi.be                      -->
-<!--  september 2017                      -->
+<!--  october 2017                      -->
 
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <title>Novitz Jean-Philippe JS Clock</title>
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
+  
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<div id="clock-wrapper">
-  <div id="clock-face">
-  </div>
-  <div id="curtain">
-  </div>
-  <div id="seconds"> </div>
-  <div id="minutes"> </div>
-  <div id="hours"> </div>
-</div>
+<div class="container-fluid">
 
+    <div class="header">
+      <h1>Javascript30</h1>
+      <h2>Day 2 : CSS + JS Clock</h2>
+    </div>
+
+    <div id="clock-wrapper">
+      <div id="clock-face">
+      </div>
+      <div id="curtain">
+      </div>
+      <div id="seconds"> </div>
+      <div id="minutes"> </div>
+      <div id="hours"> </div>
+    </div>
+
+    <div class="footer">
+      <p>
+        <a href="https://javascript30.com">Wes Bos ' Javascript 30 : 30 Day Vanilla JS Coding Challenge</a>
+        <br />Day 2 - This is my version of 'CSS + JS Clock'
+          <br />This my github <a href="https://github.com/jphNovitz/Javascript30">repo</a>
+      </p>
+    </div>
+
+</div>
 <script>
 
 // Get the seconds hands from the function
