--- a/04-array_cardio_day_1/index.html
+++ b/04-array_cardio_day_1/index.html
@@ -28,12 +28,28 @@
     const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    var filteredInventors = inventors.filter(inventor => {
+      return (inventor.year >= 1500) && (inventor.year < 1600)
+    })
+    console.log('filter() \n The inventors who were born in the 1500\'s are: ')
+    filteredInventors.forEach(inventor => { console.log(inventor.first + ' ' + inventor.last)})
+    
+    
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    console.log('\nmap() \n here is the list of invertor\'s first and last name: ')
+    inventors.map( inventor => { console.log(inventor.first + ' ' + inventor.last)})
+
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+   
+
+
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    console.log('\nreduce() \n This is a list of inventors with how many years they have lived: ')
+    inventors.reduce( ()   => { }, )
+
     // 5. Sort the inventors by years lived
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
