--- a/01-_javaScript_drum_kit/index.html
+++ b/01-_javaScript_drum_kit/index.html
@@ -4,90 +4,67 @@
 <!--  Novitz Jean-Philippe (jphnovitz.be) -->
 <!--  hello@jiphi.be                      -->
 <!--  november 2017                      -->
-
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>Novitz Jean-Philippe JS Drum Kit</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-        crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+  <title>jphNovitz - JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <div class="container">
-    <div class="row">
-      <header class="col-lg-12 col-sm-12 text-center">
-        <h1>Javascript 30</h1>
-        <h2>Day 1 : Javascript Drum Kit </h2>
-      </header>
-    <div class="row">
-      <section class="col-lg-10 col-lg-offset-1">
-        <div class="keys">
-          <div data-key="81" class="key">
-            <span class="letter">Q</span>
-            <span class="sound">clap</span>
-          </div>
-          <div data-key="83" class="key">
-            <span class="letter">S</span>
-            <span class="sound">hihat</span>
-          </div>
-          <div data-key="68" class="key">
-            <span class="letter">D</span>
-            <span class="sound">hit</span>
-          </div>
-          <div data-key="70" class="key">
-            <span class="letter">F</span>
-            <span class="sound">openhat</span>
-          </div>
-          <div data-key="71" class="key">
-            <span class="letter">G</span>
-            <span class="sound">boom</span>
-          </div>
-          <div data-key="72" class="key">
-            <span class="letter">H</span>
-            <span class="sound">ride</span>
-          </div>
-          <div data-key="74" class="key">
-            <span class="letter">J</span>
-            <span class="sound">snare</span>
-          </div>
-          <div data-key="75" class="key">
-            <span class="letter">K</span>
-            <span class="sound">tom</span>
-          </div>
-          <div data-key="76" class="key">
-            <span class="letter">L</span>
-            <span class="sound">tink</span>
-          </div>
-        </div>
-      </section>
-  </div>
-  <div class="row">
-      <footer class="col-lg-12 text-center">
-        <p>
-          <a href="https://javascript30.com/">Wes Bos ' Javascript 30 : 30 Day Vanilla JS Coding Challenge</a>
-          <br /><strong>Day 1 </strong> - This is my version of 'Javascript Drum Kit'
-          <br />This my <a href="">github repos</a> 
-        </p>
-      </footer>
-  </div>
-
+<div class="title">
+  <h1>Javascript30</h1>
+  <h2>1. Javascript drum kit</h2>
 </div>
 
-  <audio data-key="81" src="sounds/clap.wav"></audio>
-  <audio data-key="83" src="sounds/hihat.wav"></audio>
-  <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
-  <audio data-key="76" src="sounds/tink.wav"></audio>
+<div class="keys">
+  <div data-key="65" class="key">
+    <kbd>A</kbd>
+    <span class="sound">clap</span>
+  </div>
+  <div data-key="83" class="key">
+    <kbd>S</kbd>
+    <span class="sound">hihat</span>
+  </div>
+  <div data-key="68" class="key">
+    <kbd>D</kbd>
+    <span class="sound">kick</span>
+  </div>
+  <div data-key="70" class="key">
+    <kbd>F</kbd>
+    <span class="sound">openhat</span>
+  </div>
+  <div data-key="71" class="key">
+    <kbd>G</kbd>
+    <span class="sound">boom</span>
+  </div>
+  <div data-key="72" class="key">
+    <kbd>H</kbd>
+    <span class="sound">ride</span>
+  </div>
+  <div data-key="74" class="key">
+    <kbd>J</kbd>
+    <span class="sound">snare</span>
+  </div>
+  <div data-key="75" class="key">
+    <kbd>K</kbd>
+    <span class="sound">tom</span>
+  </div>
+  <div data-key="76" class="key">
+    <kbd>L</kbd>
+    <span class="sound">tink</span>
+  </div>
+</div>
+
+<audio data-key="65" src="sounds/clap.wav"></audio>
+<audio data-key="83" src="sounds/hihat.wav"></audio>
+<audio data-key="68" src="sounds/kick.wav"></audio>
+<audio data-key="70" src="sounds/openhat.wav"></audio>
+<audio data-key="71" src="sounds/boom.wav"></audio>
+<audio data-key="72" src="sounds/ride.wav"></audio>
+<audio data-key="74" src="sounds/snare.wav"></audio>
+<audio data-key="75" src="sounds/tom.wav"></audio>
+<audio data-key="76" src="sounds/tink.wav"></audio>
   <script>
     window.addEventListener('keydown', function(e) {
       console.log(e.keyCode);
