add color to hl

--- a/03_css_variables/index.html
+++ b/03_css_variables/index.html
@@ -1,3 +1,8 @@
+<!--  Javascript30  - Wes Bos challenge           -->
+<!--  Day 3 :: css variable                       -->
+<!--  Novitz Jean-Philippe (jphnovitz.be)         -->
+<!--  hello@jphNovitz.be                          -->
+<!--  september 2020                              -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +10,7 @@
     <title>Scoped CSS Variables and JS</title>
 </head>
 <body>
+<!--Javascript 30-->
 <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
 <div class="controls">
@@ -57,6 +63,9 @@
         padding: var(--spacing);
         filter: blur(var(--blur));
 
+    }
+    .hl {
+        color: var(--base);
     }
 
 
