first version finalisation

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <h2 class="text-center">Exercices</h2>
 
         <div id="content">
-            <p>Wes Bos a partagé une série de 30 exercices pour se tester et s'améliorer en javascript</p>
-            <p>Même si je ne fais pas les 30 exercices en 30 jours, je trouve amusant de faire, de temps en temps, l'un ou l'autre de ses exercice.</p> 
+            <p><a href="https://wesbos.com/">Wes Bos</a> a partagé une série de 30 exercices pour se tester et s'améliorer en javascript</p>
+            <p>Même si je ne fais pas les 30 exercices en 30 jours, je trouve amusant de faire, de temps en temps, l'un ou l'autre de ses exercices.</p>
+            <p>Ces exos sont complètement gratuits à l'adresse <a href="https://javascript30.com/">javascript30.com</a></p> 
+            <p>Enjoy !</p>
             
         </div>
 
@@ -53,6 +55,10 @@
                  </span>
             </div>
 
+        </div>
+
+        <div id="footer" class="text-center">
+        <h5><a href="https://jphnovitz.be">jphNovitz (2020)</a> - <a href="https://github.com/jphNovitz/Javascript30"> my JS 30 Github</a></h5>
         </div>
     </div>
 </body>
